Style: fix the alignment of notification messages.

--- a/src/main/resources/static/style/waiter.css
+++ b/src/main/resources/static/style/waiter.css
@@ -73,7 +73,7 @@ ul li .text{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 250px;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -89,3 +89,11 @@ ul li .text{
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+.msg-detail{
+    display: inline-flex;
+    margin: 1.5em;
+    font-weight: 100;
+    padding-bottom: 1em;
+    border-bottom: 2px solid #ccc;
+}
